--- a/src/sections/Experience/ExperienceCardStyles.module.css
+++ b/src/sections/Experience/ExperienceCardStyles.module.css
@@ -1,12 +1,12 @@
 .expCard {
   border: 1px solid var(--text-color);
-  border-radius: 8px;
-  padding: 8px;
+  border-radius: 10px;
+  padding: 20px;
   width: 100%;
   max-width: 360px;
-  transition: all 0.3s ease-in-out;
-  overflow: hidden;
-  line-height: 1.3;
+  transition: transform 0.3s ease;
+  background-color: var(--card-bg);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
 }
 
 .expCard:hover {
