--- a/src/sections/Experience/ExperienceStyles.module.css
+++ b/src/sections/Experience/ExperienceStyles.module.css
@@ -2,54 +2,36 @@
   display: flex;
   flex-direction: column;
   text-align: center;
+  padding: 60px 20px;
+  gap: 40px;
 }
 
 .expContent {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  max-width: 330px;
-  text-align: left;
-}
-
-.expContent h3 {
-  font-size: 18px;
-}
-
-.expLine {
-  height: 30px;
-  width: 2px;
-  background-color: var(--line-border-color);
-  display: block;
-}
-
-.expDesc {
-  color: var(--text-color);
-  font-size: 14px;
-}
-
-.comp {
-  color: var(--text-color);
-  font-size: 16px;
-  font-weight: bolder;
-  display: flex;
-  justify-content: space-between;
-  margin: 10px 0;
+  gap: 40px;
 }
 
 @media (min-width: 800px) {
-  .expLine {
-    height: 400px;
-  }
-
   .expContent {
-    max-width: 100%;
-    width: 100%;
     flex-direction: row;
-    gap: 20px;
+    justify-content: center;
+    gap: 60px;
   }
-  .expContent:nth-child(1) {
-    align-self: start;
-  }
+}
+
+.comp {
+  display: flex;
+  justify-content: space-between;
+  font-weight: 600;
+  color: var(--text-color);
+  font-size: 14px;
+  margin: 12px 0;
+}
+
+.expDesc {
+  font-size: 14px;
+  color: var(--text-color);
+  line-height: 1.5;
 }
