--- a/src/sections/Hero/HeroStyles.module.css
+++ b/src/sections/Hero/HeroStyles.module.css
@@ -59,7 +59,7 @@
 
 .colorMode {
   position: absolute;
-  right: 0;
+  right: 10px;
   width: 25px;
 }
 
@@ -75,6 +75,7 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  align-items: center;
 }
 
 @media (width >= 800px) {
