--- a/src/sections/Skills/SkillsStyles.module.css
+++ b/src/sections/Skills/SkillsStyles.module.css
@@ -1,47 +1,17 @@
 .container {
+  text-align: center;
+  padding: 60px 20px;
   display: flex;
   flex-direction: column;
-  text-align: center;
-
-  span {
-    display: flex;
-    align-items: center;
-    gap: 5px;
-  }
-
-  img {
-    width: 20px;
-  }
+  gap: 40px;
 }
 
-.skillList {
+.grid {
   display: flex;
-  justify-content: space-evenly;
-  align-self: center;
   flex-wrap: wrap;
-  row-gap: 40px;
-  max-width: 26ch;
-}
-
-hr {
-  width: 100px;
-  height: 1px;
-  border: none;
-  background-color: var(--text-color);
-  margin: 30px auto;
-}
-
-@media (width >= 800px) {
-  .skillList {
-    max-width: fit-content;
-    gap: 30px;
-
-    p {
-      font-size: 20px;
-    }
-  }
-
-  hr {
-    width: 300px;
-  }
+  flex-shrink: 0;
+  gap: 10px;
+  justify-items: center;
+  max-width: 800px;
+  margin: 0 auto;
 }
