--- a/src/sections/Hero/HeroStyles.module.css
+++ b/src/sections/Hero/HeroStyles.module.css
@@ -4,8 +4,9 @@
   justify-content: center;
   gap: 20px;
   text-align: center;
-  height: 100vh;
   min-height: 500px;
+  top: 74px;
+  position: relative;
 
   .hero {
     max-width: 200px;
