--- a/src/common/ProjectCard.module.css
+++ b/src/common/ProjectCard.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   gap: 12px;
   align-items: center;
-  background-color: var(--project-card-bg);
+  background-color: var(--background-color);
   border-radius: 16px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
   padding: 20px;
@@ -11,6 +11,7 @@
   max-width: 300px;
   text-decoration: none;
   color: var(--text-color);
+  border: 1px solid;
 }
 
 .card:hover {
@@ -31,4 +32,38 @@
 .card p {
   font-size: 14px;
   color: var(--text-secondary);
+}
+
+.techWrapper {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+.techWrapper span {
+  background-color: var(--btn-color);
+  color: var(--btn-text-color);
+  padding: 4px;
+  border-radius: 4px;
+  font-weight: bold;
+}
+
+.projectLinkWrap {
+  display: flex;
+  justify-content: space-between;
+  padding: 2px;
+  width: 100%;
+}
+
+.projectLinkWrap span {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  font-size: 16px;
+}
+
+.projectLinkWrap span a {
+  all: unset;
+  align-self: center;
 }
