--- a/src/sections/Education/EducationStyles.module.css
+++ b/src/sections/Education/EducationStyles.module.css
@@ -3,7 +3,8 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  width: 100%;
+  padding: 0 20px 40px 20px;
+  gap: 40px;
 }
 
 .expLine {
