--- a/src/sections/Experience/ExperienceStyles.module.css
+++ b/src/sections/Experience/ExperienceStyles.module.css
@@ -2,8 +2,13 @@
   display: flex;
   flex-direction: column;
   text-align: center;
-  padding: 60px 20px;
+  padding: 60px 20px 30px 20px;
   gap: 40px;
+  margin-top: 30px;
+}
+
+.sectionTitle {
+  margin-top: 30px;
 }
 
 .expContent {
