--- a/src/sections/Skills/SkillsStyles.module.css
+++ b/src/sections/Skills/SkillsStyles.module.css
@@ -1,6 +1,6 @@
 .container {
   text-align: center;
-  padding: 60px 20px;
+  padding: 0 20px 40px 20px;
   display: flex;
   flex-direction: column;
   gap: 40px;
