--- a/src/sections/Contact/ContactStyles.module.css
+++ b/src/sections/Contact/ContactStyles.module.css
@@ -72,7 +72,7 @@ input[type="submit"]:active {
   display: flex;
   flex-direction: column;
   gap: 12px;
-  color: var(--btn-color);
+  color: #0987f2;
 }
 
 .contactDetails a {
