--- a/src/sections/Header/HeaderStyles.module.css
+++ b/src/sections/Header/HeaderStyles.module.css
@@ -27,6 +27,10 @@
   color: var(--accent-color, #007aff);
 }
 
+.navItem:active {
+  color: var(--accent-color, #007aff);
+}
+
 @keyframes headerAnimation {
   0% {
     top: -56px;
@@ -34,5 +38,15 @@
 
   100% {
     top: 0;
+  }
+}
+
+@media (width >= 800px) {
+  .header {
+    justify-content: center;
+  }
+
+  .navItem {
+    margin-right: 20px;
   }
 }
