--- a/src/App.css
+++ b/src/App.css
@@ -45,8 +45,9 @@ p {
 
 h2,
 h3,
-p {
-  font-family: "Roboto Mono", monospace;
+p,
+span {
+  font-family: "serif";
 }
 
 h1,
@@ -67,6 +68,7 @@ h1 {
 p {
   font-size: 16px;
   font-weight: 300;
+  line-height: 1.3;
   text-align: justify;
 }
 
@@ -90,7 +92,7 @@ p {
     font-size: 24px;
   }
   p {
-    font-size: 20px;
+    font-size: 20x;
   }
 
   .sectionTitle {
